# bbc_nlp_pipeline

./: .env.template  .gitignore  ID.txt  LICENSE  README.md  io_utils.py  pyproject.toml
outputs/entity_recognition/: media_personalities.json  summary_of_events_in_april.json
outputs/subcategory_classification/: subcategory_classification.json
outputs/topic_modelling/: business_topic_summary.txt  entertainment_topic_summary.txt  politics_topic_summary.txt  sport_topic_summary.txt  tech_topic_summary.txt
src/: entity_recognition.py  subcategory_classification.py  topic_modelling.py
